fixing osx clear screen issue